# SEA-Stateful-Execution-Environment-for-Conversational-Big-Data-Analytics

./: README.md  pyproject.toml  sea_quickstart.ipynb
data/json_summaries/: dim_customers.json  dim_date.json  dim_marketing.json  dim_products.json  dim_shipments.json  dim_stores.json  fact_sales.json  fact_web_analytics.json
data/vector_db_globomart/: chroma.sqlite3
examples/: minimal_local.py
sea/: __init__.py
sea/api/: server.py
sea/core/: __init__.py  dag.py  executor.py  planner.py  schemas.py  session.py  state.py  tool.py
sea/tools/: __init__.py  ai_analytics.py  chart_generator.py  insight_summarizer.py  query_synthesizer.py  schema_retriever.py
sea/tools/_lib/: __init__.py  chart_gen.py  chroma_store.py  colours.py  databricks.py  datamodel.py  df_summarizer.py  pandas_gen.py
sea/workflows/: __init__.py  analytics.py
sea_analytics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
